pictorus-fsp/bindings/seam.rs

/* automatically generated by rust-bindgen 0.72.1 */

use renesas_fsp_sys::*;

pub const RM_PICTORUS_OPEN: u32 = 1346978644;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_AppInterface {
    _unused: [u8; 0],
}
pub type AppInterface = st_AppInterface;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_rm_pictorus_bindings {
    pub p_ioport: *const ioport_instance_t,
    pub p_time_base: *const timer_instance_t,
    pub p_gpio_pins: *const bsp_io_port_pin_t,
    pub gpio_pin_count: u8,
    pub pp_pwm: *const *const timer_instance_t,
    pub pwm_count: u8,
}
pub type rm_pictorus_bindings_t = st_rm_pictorus_bindings;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_rm_pictorus_cfg {
    pub p_bindings: *const rm_pictorus_bindings_t,
    pub p_heap: *mut core::ffi::c_void,
    pub heap_bytes: usize,
}
pub type rm_pictorus_cfg_t = st_rm_pictorus_cfg;
pub type rm_pictorus_ctrl_t = core::ffi::c_void;
#[repr(C)]
pub struct st_rm_pictorus_instance_ctrl {
    pub open: u32,
    pub p_cfg: *const rm_pictorus_cfg_t,
    pub p_app: *mut AppInterface,
    pub p_build_id: *const core::ffi::c_char,
    pub tick_pending: bool,
    pub missed_ticks: u32,
    pub elapsed_periods: u64,
    pub timer_clock_hz: u32,
    pub timer_period_counts: u32,
    pub timer_direction: timer_direction_t,
}
pub type rm_pictorus_instance_ctrl_t = st_rm_pictorus_instance_ctrl;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_rm_pictorus_api {
    pub open: ::core::option::Option<
        unsafe extern "C" fn(
            p_ctrl: *mut rm_pictorus_ctrl_t,
            p_cfg: *const rm_pictorus_cfg_t,
        ) -> fsp_err_t,
    >,
    pub update: ::core::option::Option<
        unsafe extern "C" fn(p_ctrl: *mut rm_pictorus_ctrl_t, app_time_s: f64) -> fsp_err_t,
    >,
    pub run:
        ::core::option::Option<unsafe extern "C" fn(p_ctrl: *mut rm_pictorus_ctrl_t) -> fsp_err_t>,
    pub close:
        ::core::option::Option<unsafe extern "C" fn(p_ctrl: *mut rm_pictorus_ctrl_t) -> fsp_err_t>,
}
pub type rm_pictorus_api_t = st_rm_pictorus_api;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_rm_pictorus_instance {
    pub p_ctrl: *mut rm_pictorus_ctrl_t,
    pub p_cfg: *const rm_pictorus_cfg_t,
    pub p_api: *const rm_pictorus_api_t,
}
pub type rm_pictorus_instance_t = st_rm_pictorus_instance;
unsafe extern "C" {
    pub static g_rm_pictorus_on_rm_pictorus: rm_pictorus_api_t;
}
unsafe extern "C" {
    pub static mut g_rm_pictorus_heap: [u8; 0usize];
}
unsafe extern "C" {
    pub fn pictorus_rt_build_id() -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn pictorus_rt_heap_init(p_base: *mut core::ffi::c_void, bytes: usize);
}
unsafe extern "C" {
    pub fn app_interface_new() -> *mut AppInterface;
}
unsafe extern "C" {
    pub fn app_interface_update(p_app: *mut AppInterface, app_time_s: f64);
}
unsafe extern "C" {
    pub fn app_interface_free(p_app: *mut AppInterface);
}
